--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".BreedListActivity">
-    </activity>
-        <activity android:name=".BreedImageActivity">
-</activity>
+        <activity android:name=".BreedListActivity"></activity>
+        <activity android:name=".BreedImageActivity"></activity>
+        <activity android:name=".BreedDetailActivity"></activity>
     </application>
 
 </manifest>
