--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,9 +25,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"></activity>
-        <activity android:name=".BreedDetailActivity"></activity>
-        <activity android:name=".BreedSingleImageActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".BreedDetailActivity" />
+        <activity android:name=".BreedSingleImageActivity" />
+        <activity android:name=".SubBreedActivity"></activity>
     </application>
 
 </manifest>
