--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
 
     <application
         android:allowBackup="true"
-        android:name=".DogBreedManagerComponent"
+        android:name=".DogBreedApplication"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -29,7 +29,6 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".BreedDetailActivity" />
         <activity android:name=".BreedSingleImageActivity" />
-        <activity android:name=".SubBreedActivity"></activity>
     </application>
 
 </manifest>
