--- a/build.gradle
+++ b/build.gradle
@@ -4,11 +4,16 @@ buildscript {
     ext.kotlin_version = '1.2.61'
 
     repositories {
-        google()
+
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,8 +23,9 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
+
         jcenter()
+        google()
     }
 }
 
