--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation 'androidx.annotation:annotation:1.1.0'
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 
 
 }
